# Aether

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.gradle.kts  final_test_log.txt  gradle.properties  llms-full.txt  llms.txt  output.txt  settings.gradle.kts  sign-artifact.sh  test_output.txt  test_radix.kt  version.properties
aether-admin/: build.gradle.kts  gradle.lockfile
aether-auth/: build.gradle.kts  gradle.lockfile
aether-auth-firestore/: build.gradle.kts  run-emulator-gate.sh
aether-auth-oidc/: build.gradle.kts
aether-auth-postgresql/: build.gradle.kts  gradle.lockfile
aether-auth-saml/: build.gradle.kts  gradle.lockfile
aether-auth-scim/: README.md  build.gradle.kts  gradle.lockfile
aether-auth-summon/: README.md  build.gradle.kts  gradle.lockfile
aether-auth-testkit/: build.gradle.kts  gradle.lockfile
aether-browser-client/: README.md  build.gradle.kts  gradle.lockfile
aether-channels/: build.gradle.kts  gradle.lockfile
aether-cli/: build.gradle.kts  gradle.lockfile
aether-core/: build.gradle.kts  gradle.lockfile
aether-db/: build.gradle.kts  gradle.lockfile
aether-forms/: build.gradle.kts  gradle.lockfile
aether-grpc/: build.gradle.kts  gradle.lockfile
aether-identity-wasi-host/: CMakeLists.txt  README.md
aether-identity-wasi-host/include/: aether_identity_crypto_host.h
aether-identity-wasi-host/src/: aether_identity_crypto_host.c
aether-identity-wasi-host/tests/: aether_identity_crypto_host_test.c
aether-ksp/: build.gradle.kts  gradle.lockfile
aether-net/: build.gradle.kts  gradle.lockfile
docs/: admin.md  (+6 more)
(+492 files in other folders)
